unpackaged/main/default/objects/Account/fields/Segmentation_client__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_client__c</fullName>
    <label>Segmentation client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>