unpackaged/main/default/objects/Account/fields/Source_de_donnees_fx__c.field-meta.xml
<CustomField>
    <fullName>Source_de_donnees_fx__c</fullName>
    <formula>IF (Source_de_donnees__c =&#39;SSF&#39;, &quot;SSF : Saisie Salesforce&quot;,

IF (Source_de_donnees__c =&#39;RPPS&#39;, &quot;RPPS : Source externe RPPS&quot;,

IF (Source_de_donnees__c =&#39;GLIMS&#39;, &quot;GLIMS : GLIMS&quot;,

IF (Source_de_donnees__c =&#39;BISCC&#39;, &quot;BISCC : Interface BI Spé&quot;,

IF (Source_de_donnees__c =&#39;BIGCC&#39;, &quot;BIGCC : Interface BI Groupe&quot;,

IF (Source_de_donnees__c =&#39;BIGOG&#39;, &quot;BIGOG : Orga Group&quot;,

&quot;SSF : Saisie Salesforce&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formule source de données</label>
    <type>Text</type>
</CustomField>