unpackaged/main/default/objects/Account/fields/Structure_BU__c.field-meta.xml
<CustomField>
    <fullName>Structure_BU__c</fullName>
    <formula>TEXT(Structure_custom_object__r.BU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure - BU</label>
    <type>Text</type>
</CustomField>