unpackaged/main/default/objects/Account/fields/Structure_custom_object__c.field-meta.xml
<CustomField>
    <fullName>Structure_custom_object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Structure</label>
    <referenceTo>Structure__c</referenceTo>
    <relationshipLabel>Comptes (Établissements)</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>