unpackaged/main/default/objects/Account/fields/Structure_juridique__c.field-meta.xml
<CustomField>
    <fullName>Structure_juridique__c</fullName>
    <label>Structure juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nom propre</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
            <value>
                <fullName>Organisme international</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>SA/SARL</fullName>
            </value>
            <value>
                <fullName>SCM</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>SELARL</fullName>
            </value>
            <value>
                <fullName>SELAFA</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SELAS</fullName>
            </value>
            <value>
                <fullName>SELCA</fullName>
            </value>
            <value>
                <fullName>GIE</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>Hôpital</fullName>
            </value>
            <value>
                <fullName>Association Loi de 1901</fullName>
            </value>
            <value>
                <fullName>Institut</fullName>
            </value>
            <value>
                <fullName>SGA</fullName>
            </value>
            <value>
                <fullName>SGAM</fullName>
            </value>
            <value>
                <fullName>Mutuelle</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>GPP</fullName>
            </value>
            <value>
                <fullName>UGM</fullName>
            </value>
            <value>
                <fullName>UMG</fullName>
            </value>
            <value>
                <fullName>UOP</fullName>
            </value>
            <value>
                <fullName>ASBL/VZW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>