unpackaged/main/default/objects/Account/fields/Structure_Pole__c.field-meta.xml
<CustomField>
    <fullName>Structure_Pole__c</fullName>
    <formula>TEXT(Structure_custom_object__r.Pole__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure - Pôle</label>
    <type>Text</type>
</CustomField>