unpackaged/main/default/objects/Account/fields/Synthese_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Synthese_Facturation__c</fullName>
    <label>Synthèse facturation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>