unpackaged/main/default/objects/Account/fields/Synthese_Media__c.field-meta.xml
<CustomField>
    <fullName>Synthese_Media__c</fullName>
    <label>Synthèse media</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>