unpackaged/main/default/objects/Account/fields/Tech_Compte_Hierarchie_concatenee_TXT__c.field-meta.xml
<CustomField>
    <fullName>Tech_Compte_Hierarchie_concatenee_TXT__c</fullName>
    <label>Tech Compte - Hiérarchie concaténée TXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>