unpackaged/main/default/objects/Account/fields/Tech_ID_s_Niv_hierarchie_supplement__c.field-meta.xml
<CustomField>
    <fullName>Tech_ID_s_Niv_hierarchie_supplement__c</fullName>
    <formula>Parent.Parent.Parent.Parent.Parent.Tech_ID_compte_et_5_niveaux_superieurs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech ID&#39;s Niv. hiérarchie. supplément.</label>
    <type>Text</type>
</CustomField>