unpackaged/main/default/objects/Account/fields/TECH_InterfacePaytweak__c.field-meta.xml
<CustomField>
    <fullName>TECH_InterfacePaytweak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Interface Paytweak</label>
    <type>Checkbox</type>
</CustomField>