unpackaged/main/default/objects/Account/fields/Tech_Niv_hierarchiques_supplementaires__c.field-meta.xml
<CustomField>
    <fullName>Tech_Niv_hierarchiques_supplementaires__c</fullName>
    <formula>Parent.Parent.Parent.Parent.Parent.les_cinq_niveaux_superieurs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Niv. hiérarchiques supplémentaires</label>
    <type>Text</type>
</CustomField>