unpackaged/main/default/objects/Account/fields/Tech_Niveau_client__c.field-meta.xml
<CustomField>
    <fullName>Tech_Niveau_client__c</fullName>
    <description>Champ technique permettant de calculer le niveau où se trouve le client dans la hiéarchie à laquelle il appartient</description>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id))
,
6
,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id))
,
5
,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id))
,
4
,
IF(NOT(ISBLANK(Parent.Parent.Id))
,
3
,
IF(NOT(ISBLANK(Parent.Id))
,
2
,
1
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Niveau client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>