unpackaged/main/default/objects/Account/fields/Type_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Type_d_activite__c</fullName>
    <label>Type d’activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canine</fullName>
            </value>
            <value>
                <fullName>Rurale</fullName>
            </value>
            <value>
                <fullName>Mixte (canin et rural)</fullName>
            </value>
            <value>
                <fullName>Équine</fullName>
            </value>
            <value>
                <fullName>Indus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>