unpackaged/main/default/objects/Account/fields/Type_de_collecte__c.field-meta.xml
<CustomField>
    <fullName>Type_de_collecte__c</fullName>
    <label>Type de collecte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chronopost</fullName>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
            <value>
                <fullName>Coursier J+1</fullName>
            </value>
            <value>
                <fullName>Coursier J0</fullName>
            </value>
            <value>
                <fullName>Coursier labo</fullName>
            </value>
            <value>
                <fullName>Dépose labo</fullName>
            </value>
            <value>
                <fullName>Systématique</fullName>
            </value>
            <value>
                <fullName>Systématique partiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>