unpackaged/main/default/objects/Account/fields/Type_de_compte_icon__c.field-meta.xml
<CustomField>
    <fullName>Type_de_compte_icon__c</fullName>
    <formula>IF (
RecordType.Name = &#39;Etablissement&#39;,
 
IMAGE(&quot;/resource/1551194700000/ICONS_ACC_Establishment&quot;, &quot;Etablissement&quot;, 40 ,40 ) 
, 

IF (
RecordType.Name = &#39;Fournisseur&#39;,
 
IMAGE(&quot;/resource/1562147528000/ICONS_ACC_Fournisseurs&quot;, &quot;Fournisseur&quot;, 60 ,60 ) 
,

IF (
RecordType.Name = &#39;Compte désactivé&#39;,
 
IMAGE(&quot;/resource/1551194734000/ICONS_ACC_Closed_Establishment&quot;, &quot;Compte désactivé&quot;, 40 ,40 ) 
,
IF (
RecordType.Name = &#39;Compte Client SGL (BI Groupe)&#39;,
 
IMAGE(&quot;/resource/1552474352000/ICONS_ACC_SGL_Gp&quot;, &quot;SGL Groupe&quot;, 40 ,75 ) 
,

IF (
RecordType.Name = &#39;Compte Client SGL (BI Spé)&#39;,
 
IMAGE(&quot;/resource/1552474324000/ICONS_ACC_SGL_Spe&quot;, &quot;SGL Spé&quot;, 40 ,75 ) 
,

IF (
RecordType.Name = &#39;Groupe&#39;,
 
IMAGE(&quot;/resource/1551194809000/ICONS_ACC_Group&quot;, &quot;Groupe&quot;, 40 ,40 ) 
,
&quot;&quot; 
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icône du type de compte</label>
    <type>Text</type>
</CustomField>