unpackaged/main/default/objects/Account/fields/Type_de_Transport_oco__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Transport_oco__c</fullName>
    <label>Type de Transport oco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCO_type_de_transport</valueSetName>
    </valueSet>
</CustomField>