unpackaged/main/default/objects/Account/recordTypes/Compte_Client_SGL_BI.recordType-meta.xml
<RecordType>
    <fullName>Compte_Client_SGL_BI</fullName>
    <active>true</active>
    <label>Compte Client SGL (BI Spé)</label>
</RecordType>