unpackaged/main/default/objects/Account/recordTypes/Compte_Client_SGL_BI_Groupe.recordType-meta.xml
<RecordType>
    <fullName>Compte_Client_SGL_BI_Groupe</fullName>
    <active>true</active>
    <label>Compte Client SGL (BI Groupe)</label>
    
    
    
    
    
    
    
    
</RecordType>