unpackaged/main/default/objects/Account/recordTypes/Compte_desactive.recordType-meta.xml
<RecordType>
    <fullName>Compte_desactive</fullName>
    <active>true</active>
    <label>Compte désactivé</label>
</RecordType>