unpackaged/main/default/objects/Account/recordTypes/Etablissement.recordType-meta.xml
<RecordType>
    <fullName>Etablissement</fullName>
    <active>true</active>
    <label>Etablissement</label>
    
    
    
    
    
    
    
    
</RecordType>