unpackaged/main/default/objects/Account/recordTypes/Fournisseur.recordType-meta.xml
<RecordType>
    <fullName>Fournisseur</fullName>
    <active>true</active>
    <label>Fournisseur</label>
    
    
    
    
    
    
    
    
</RecordType>