unpackaged/main/default/objects/Account/recordTypes/Labo_Organisation_Groupe.recordType-meta.xml
<RecordType>
    <fullName>Labo_Organisation_Groupe</fullName>
    <active>true</active>
    <label>Labo - Organisation Groupe</label>
    
    
    
    
    
    
    
    
</RecordType>