unpackaged/main/default/objects/Account/validationRules/VR_ACC_Changement_du_RT_bloque.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_Changement_du_RT_bloque</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.Tech_By_Pass_VR__c = false, 
ISCHANGED(RecordTypeId),

NOT(
OR
(
$Profile.Id = &quot;00e1t000000ufJS&quot;,
$Profile.Id = &quot;00e1t000000LOv3&quot;
)
)

)</errorConditionFormula>
    <errorMessage>Merci de ne pas changer le type d&#39;enregistrement du compte. Cela est réservé à l&#39;administrateur.</errorMessage>
</ValidationRule>