unpackaged/main/default/objects/Account/listViews/Cerballiance_Artois_HEX_113.listView-meta.xml
<ListView>
    <fullName>Cerballiance_Artois_HEX_113</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Code_compte_metier__c</columns>
    <columns>FINESS__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Numero_SFA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>HEX-113</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Compte_Client_SGL_BI_Groupe</value>
    </filters>
    <label>Correspondants Artois (HEX-113)</label>
</ListView>