unpackaged/main/default/objects/Account/listViews/Comptes_associes_a_ma_structure.listView-meta.xml
<ListView>
    <fullName>Comptes_associes_a_ma_structure</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Numero_SFA__c</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Structure_custom_object__c</columns>
    <columns>Structure_Pole__c</columns>
    <columns>Structure_BU__c</columns>
    <columns>Associe_a_ma_BU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associe_a_ma_structure__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Comptes associés à ma structure</label>
</ListView>