unpackaged/main/default/objects/Account/listViews/Comptes_avec_la_hierarchie.listView-meta.xml
<ListView>
    <fullName>Comptes_avec_la_hierarchie</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Numero_SFA__c</columns>
    <columns>Categories__c</columns>
    <columns>Activites__c</columns>
    <columns>Structure_custom_object__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>les_cinq_niveaux_superieurs__c</columns>
    <filterScope>Everything</filterScope>
    <label>Comptes avec la hiérarchie</label>
</ListView>