unpackaged/main/default/objects/Account/listViews/Comptes_Clients_SGL_BI_groupe.listView-meta.xml
<ListView>
    <fullName>Comptes_Clients_SGL_BI_groupe</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Numero_SFA__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Compte_Client_SGL_BI_Groupe</value>
    </filters>
    <label>Tous les comptes clients SGL BI groupe</label>
</ListView>