unpackaged/main/default/objects/Account/listViews/Correspondants_Loire_HEX_109.listView-meta.xml
<ListView>
    <fullName>Correspondants_Loire_HEX_109</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Code_compte_metier__c</columns>
    <columns>FINESS__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Numero_SFA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>HEX-109</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Compte_Client_SGL_BI_Groupe</value>
    </filters>
    <label>Correspondants Loire (HEX-109)</label>
</ListView>